Add text and style

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="resources\style.css" type="text/css" rel="stylesheet">
+    <link href="resources\css\style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Excursion</title>
   </head>
@@ -12,5 +12,21 @@
     <h4>
       Download Excursion (Coming soon!)
     </h4>
+    <h2>
+      Your personal travel guide
+    </h2>
+    <h3>
+      Excursion remembers places you like, and recommends new points of interest around you.
+    </h3>
+    <h2>
+      Coming Soon for iPhone and Android
+    </h2>
+    <h4>
+      Download Excursion (Coming soon!)
+    </h4>
+    <h3 id="footer">
+      © Excursion
+    </h3>
+
   </body>
 </html>
