--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
     <h4>
       Download Excursion (Coming soon!)
     </h4>
+    <p>
+      <a href="resources\video\excursion.mp4"/>
+    </p>
     <h2>
       Your personal travel guide
     </h2>
     <h3>
       Excursion remembers places you like, and recommends new points of interest around you.
     </h3>
+    <p>
+      <img src = "resources\images\camp.jpg"/>
+      <img src = "resources\images\phone.png"/>
+    </p>
     <h2>
       Coming Soon for iPhone and Android
     </h2>
