--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       Download Excursion (Coming soon!)
     </h4>
     <p>
-      <a href="resources\video\excursion.mp4"/>
+      <a href="resources\video\excursion.mp4">
     </p>
     <h2>
       Your personal travel guide
@@ -23,6 +23,7 @@
     </h3>
     <p>
       <img src = "resources\images\camp.jpg"/>
+      <br />
       <img src = "resources\images\phone.png"/>
     </p>
     <h2>
