--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       Download Excursion (Coming soon!)
     </h4>
     <p>
-      <a href="resources\video\excursion.mp4">
+      <video autoplay src="resources\video\excursion.mp4">Video not supported</video>
     </p>
     <h2>
       Your personal travel guide
