loop video and lower icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       Download Excursion (Coming soon!)
     </h4>
     <p>
-      <video autoplay src="resources\video\excursion.mp4">Video not supported</video>
+      <video autoplay loop src="resources\video\excursion.mp4">Video not supported</video>
     </p>
     <h2>
       Your personal travel guide
@@ -23,7 +23,7 @@
     </h3>
     <p>
       <img src = "resources\images\camp.jpg"/>
-      <br />
+      <br /><br />
       <img src = "resources\images\phone.png"/>
     </p>
     <h2>
