ready for prod deploy

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href="resources\css\style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Excursion</title>
+    <title>Excursion Coming Soon</title>
   </head>
   <body>
     <h1>
